src/test/ui/consts/const-deref-ptr.stderr
error[E0080]: could not evaluate static initializer
  --> $DIR/const-deref-ptr.rs:4:29
   |
LL |     static C: u64 = unsafe {*(0xdeadbeef as *const u64)};
   |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^ 0xdeadbeef is not a valid pointer

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
